codama-macros/tests/codama_attribute/values_nodes/account_bump_value_node/invalid_name.fail.stderr
error: expected a string
 --> tests/codama_attribute/values_nodes/account_bump_value_node/invalid_name.fail.rs:3:39
  |
3 | #[codama(default_value = account_bump(42))]
  |                                       ^^

error: expected a string
 --> tests/codama_attribute/values_nodes/account_bump_value_node/invalid_name.fail.rs:6:39
  |
6 | #[codama(default_value = account_bump(banana))]
  |                                       ^^^^^^

error: only 'name' attribute supported
 --> tests/codama_attribute/values_nodes/account_bump_value_node/invalid_name.fail.rs:9:39
  |
9 | #[codama(default_value = account_bump(banana = "escrow"))]
  |                                       ^^^^^^
