codama-macros/tests/codama_attribute/values_nodes/account_bump_value_node/invalid_name.fail.rs
use codama_macros::codama;

#[codama(default_value = account_bump(42))]
pub struct TestWithInteger;

#[codama(default_value = account_bump(banana))]
pub struct TestWithPath;

#[codama(default_value = account_bump(banana = "escrow"))]
pub struct TestWithWrongKey;

fn main() {}
